--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:donut_progress="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dashboard_container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center"
-      android:text="Dashboard"
+  <com.github.lzyzsd.circleprogress.DonutProgress
+      android:id="@+id/main_progress"
+      android:layout_width="@dimen/progress_size"
+      android:layout_height="@dimen/progress_size"
+      android:layout_marginTop="@dimen/progress_margin_top"
+      android:layout_gravity="center_horizontal"
+      donut_progress:donut_progress="30"
+      donut_progress:donut_finished_color="@color/colorPrimary"
+      donut_progress:donut_unfinished_color="@color/progress_unfinished"
+      donut_progress:donut_text_color="@color/color_main_text"
       />
 
 </LinearLayout>
