--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFA32B</color>
-    <color name="colorPrimaryDark">#FFBB62</color>
-    <color name="colorAccent">#FF4081</color>
+  <color name="colorPrimary">#FFA32B</color>
+  <color name="colorPrimaryDark">#FFBB62</color>
+  <color name="colorAccent">#FF4081</color>
+  <color name="color_main_text">#474948</color>
 
-    <color name="error_text_red">#FF0000</color>
+  <color name="progress_unfinished">#F7F7F7</color>
+
+  <color name="error_text_red">#FF0000</color>
 </resources>
