--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -19,4 +19,34 @@
       donut_progress:donut_text_color="@color/color_main_text"
       />
 
+  <TextView
+      android:id="@+id/tv_goal"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:layout_marginTop="@dimen/generic_margin_medium"
+      android:textColor="@color/color_main_text"
+      android:textSize="@dimen/generic_text_size_slightly_medium"
+      />
+
+  <TextView
+      android:id="@+id/tv_calories"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:layout_marginTop="@dimen/generic_margin_slightly_smaller"
+      android:textColor="@color/color_main_text"
+      android:textSize="@dimen/generic_text_size_slightly_medium"
+      />
+
+    <TextView
+        android:id="@+id/tv_steps_yesterday"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/generic_margin_slightly_smaller"
+        android:textColor="@color/color_main_text"
+        android:textSize="@dimen/generic_text_size_slightly_medium"
+        />
+
 </LinearLayout>
