--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,9 @@
 
   <color name="error_text_red">#FF0000</color>
   <color name="transparent_light_grey">#8FD4D4D4</color>
+  <color name="shadow_below_start_color">#33000000</color>
+  <color name="achievement_circular_progress_fourty_pct_white">#66FFFFFF</color>
+  <color name="achievement_circular_progress_ninety_five_pct_transparent_white">#F2FFFFFF</color>
+  <color name="achievement_circular_progress_eighty_pct_transparent_white">#CCFFFFFF</color>
 
 </resources>
