--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,9 @@
   <dimen name="progress_size">260dp</dimen>
   <dimen name="progress_margin_top">40dp</dimen>
 
+  <!-- Other dimens -->
+  <dimen name="achievements_header_bar_height">60dp</dimen>
+  <dimen name="shadow_height">4dip</dimen>
+  <dimen name="achievements_image_size">60dp</dimen>
+
 </resources>
