--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,22 @@
     <item name="tabMaxWidth">72dp</item>
   </style>
 
+  <style name="DialogStyle"
+      parent="Theme.AppCompat.Light.Dialog">
+    <item name="android:colorBackground">@android:color/transparent</item>
+    <item name="android:windowBackground">@android:color/transparent</item>
+  </style>
+
+  <style name="AchievementDialogStyle">
+    <item name="android:layout_width">310dp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:background">@drawable/card_dropshadow</item>
+    <item name="android:layout_marginTop">6dp</item>
+    <item name="android:layout_marginRight">6dp</item>
+    <item name="android:layout_marginLeft">6dp</item>
+    <item name="android:layout_gravity">center</item>
+    <item name="android:layout_centerHorizontal">true</item>
+    <item name="android:clickable">true</item>
+  </style>
+
 </resources>
