--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
-  <item android:id="@+id/action_settings"
+    tools:context=".MainActivity"
+    >
+
+  <item
+      android:id="@+id/action_upgrade_to_pro"
+      android:title="@string/action_upgrade_to_pro"
+      android:orderInCategory="100"
+      app:showAsAction="never"
+      />
+
+  <item
+      android:id="@+id/action_settings"
       android:title="@string/action_settings"
       android:orderInCategory="100"
-      app:showAsAction="never"/>
+      app:showAsAction="never"
+      />
+
+
 </menu>
