--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -14,6 +15,18 @@
       android:id="@+id/main_pager"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_above="@+id/ad_view"
+      />
+
+  <com.google.android.gms.ads.AdView
+      android:id="@+id/ad_view"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:layout_alignParentBottom="true"
+      android:visibility="gone"
+      ads:adSize="BANNER"
+      ads:adUnitId="@string/banner_ad_unit_id"
       />
 
 </RelativeLayout>
