--- a/app/src/main/res/layout/item_achievement.xml
+++ b/app/src/main/res/layout/item_achievement.xml
@@ -5,4 +5,6 @@
     android:id="@+id/achievement"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:paddingTop="@dimen/generic_margin_medium"
+    android:paddingBottom="@dimen/generic_margin_medium"
     />
