--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -66,6 +66,7 @@
         android:layout_gravity="center_horizontal"
         android:textColor="@color/color_main_text"
         android:textSize="@dimen/generic_text_size_slightly_medium"
+        android:visibility="gone"
         />
 
     <TextView
@@ -77,6 +78,16 @@
         android:textColor="@color/color_main_text"
         android:textSize="@dimen/generic_text_size_slightly_medium"
         />
+
+      <TextView
+          android:id="@+id/tv_steps_average"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_horizontal"
+          android:layout_marginTop="@dimen/generic_margin_slightly_smaller"
+          android:textColor="@color/color_main_text"
+          android:textSize="@dimen/generic_text_size_slightly_medium"
+          />
 
   </LinearLayout>
 
