Fancy new splash screen and fixed bug where 0 steps and no goal was showing as completed

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,6 +34,10 @@
   <dimen name="widget_min_height">40dp</dimen>
   <dimen name="widget_min_width">288dp</dimen>
 
+  <!-- Splash Screen -->
+  <dimen name="splash_progress_size">140dp</dimen>
+  <dimen name="splash_progress_margin_top">60dp</dimen>
+
   <!-- Other dimens -->
   <dimen name="achievements_header_bar_height">60dp</dimen>
   <dimen name="shadow_height">4dip</dimen>
