--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,15 +11,15 @@
       android:id="@+id/image_logo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_centerInParent="true"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="@dimen/splash_progress_margin_top"
       android:src="@drawable/img_splash"
       />
 
   <org.lazysource.uberprogressview.UberProgressView
       android:layout_width="@dimen/splash_progress_size"
       android:layout_height="@dimen/splash_progress_size"
-      android:layout_below="@+id/image_logo"
-      android:layout_centerHorizontal="true"
+      android:layout_centerInParent="true"
       android:layout_marginTop="@dimen/splash_progress_margin_top"
       app:fading_circle_color="@android:color/white"
       app:stationary_circle_color="@android:color/white"
