--- a/app/src/main/res/layout/fragment_previous_steps.xml
+++ b/app/src/main/res/layout/fragment_previous_steps.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/previous_steps_container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     >
+
+  <TextView
+      android:id="@+id/tv_no_history"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:text="@string/progress_no_history"
+      android:textColor="@color/color_main_text"
+      android:textSize="@dimen/generic_text_size_slightly_medium"
+      android:visibility="gone"
+      />
 
   <GridView
       android:id="@+id/previous_steps_grid"
@@ -17,4 +28,4 @@
       android:scrollbars="none"
       />
 
-</LinearLayout>
+</RelativeLayout>
